# solus

./: flake.nix
solus_discord/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
solus_discord/src/: activity.rs  commands.rs  main.rs
solus_discord/src/commands/: chat.rs  dream.rs  horde.rs  info.rs  solus.rs
solus_rust/: .gitignore  Cargo.toml  cargo-config.toml
solus_rust/src/java/com/rmanky/solus/: Native.kt
solus_rust/src/rust/: archive.rs  bin.rs  build.rs  lib.rs
solus_rust/src/rust/brave/: mod.rs
solus_rust/src/rust/composer/: mod.rs
solus_rust/src/rust/data/: mod.rs
solus_rust/src/rust/flux/: mod.rs
solus_rust/src/rust/gemini/: api.rs  mod.rs
solus_rust/src/rust/proto/: message.proto  mod.rs
