[package]
name = "solus_rust"
version = "0.1.0"
edition = "2021"
build = "src/rust/build.rs"

[lib]
name = "solus_rust_lib"
crate-type = ["cdylib", "lib"]
path = "src/rust/lib.rs"

[[bin]]
name = "solus_rust_bin"
path = "src/rust/bin.rs"

[profile.release]
debug = true

[dependencies]
android_logger = "0.14.1"
async-std = "1.13.0"
backtrace = "0.3.74"
byteorder = "1.5.0"
futures = "0.3.30"
futures-executor = "0.3.30"
jni = "0.21.1"
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "blocking", "stream", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
prost = "0.13.3"
dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tokio-stream = "0.1.16"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest-eventsource = "0.6.0"
anyhow = "1.0.94"

[build-dependencies]
prost-build = "0.13.3"
